force-app/main/default/objects/ModelInventory__c/ModelInventory__c.object-meta.xml
<CustomObject>
    <label>ModelInventory</label>
    <nameField>
        <label>ModelInventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ModelInventorys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>