force-app/main/default/objects/ModelInventory__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Point Code</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ModelInventorys</relationshipLabel>
    <relationshipName>ModelInventorys</relationshipName>
    <type>Lookup</type>
</CustomField>