force-app/main/default/objects/ModelInventory__c/fields/AssemblyDate__c.field-meta.xml
<CustomField>
    <fullName>AssemblyDate__c</fullName>
    <label>AssemblyDate</label>
    <type>Date</type>
</CustomField>