force-app/main/default/objects/ModelInventory__c/fields/BarCode__c.field-meta.xml
<CustomField>
    <fullName>BarCode__c</fullName>
    <label>BarCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>