force-app/main/default/objects/ModelInventory__c/fields/ColorCode__c.field-meta.xml
<CustomField>
    <fullName>ColorCode__c</fullName>
    <label>ColorCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>