force-app/main/default/objects/ModelInventory__c/fields/ColorName__c.field-meta.xml
<CustomField>
    <fullName>ColorName__c</fullName>
    <label>ColorName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>