force-app/main/default/objects/ModelInventory__c/fields/DealerCode__c.field-meta.xml
<CustomField>
    <fullName>DealerCode__c</fullName>
    <label>DealerCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>