force-app/main/default/objects/ModelInventory__c/fields/EngineNo__c.field-meta.xml
<CustomField>
    <fullName>EngineNo__c</fullName>
    <label>EngineNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>