force-app/main/default/objects/ModelInventory__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <label>External ID (Frame No &amp; Point Code)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>