force-app/main/default/objects/ModelInventory__c/fields/FrameNo__c.field-meta.xml
<CustomField>
    <fullName>FrameNo__c</fullName>
    <label>FrameNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>