force-app/main/default/objects/ModelInventory__c/fields/FrameNoPointCode__c.field-meta.xml
<CustomField>
    <fullName>FrameNoPointCode__c</fullName>
    <formula>IF( !ISBLANK( FrameNo__c ) &amp;&amp; !ISBLANK(  PointCode__c ), FrameNo__c  + &apos;_&apos; + PointCode__c , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FrameNoPointCode</label>
    <type>Text</type>
</CustomField>