force-app/main/default/objects/ModelInventory__c/fields/InternalDeliveryNoteNo__c.field-meta.xml
<CustomField>
    <fullName>InternalDeliveryNoteNo__c</fullName>
    <label>InternalDeliveryNoteNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>