force-app/main/default/objects/ModelInventory__c/fields/InvoiceNo__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNo__c</fullName>
    <label>InvoiceNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>