force-app/main/default/objects/ModelInventory__c/fields/SalesPrice__c.field-meta.xml
<CustomField>
    <fullName>SalesPrice__c</fullName>
    <label>SalesPrice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>