force-app/main/default/objects/ModelInventory__c/fields/SalesVat__c.field-meta.xml
<CustomField>
    <fullName>SalesVat__c</fullName>
    <label>SalesVat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>