force-app/main/default/objects/ModelInventory__c/fields/SupplierCode__c.field-meta.xml
<CustomField>
    <fullName>SupplierCode__c</fullName>
    <label>SupplierCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>